Fix the footer whitespace on mobile version

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ li {
 
 .separation {
   width: 100%;
-  height: 500px;
+  height: 100vh;
 }
 
 .footer-copy-right {
